css/index.css
/* ----------------------- */
/* Custom properties       */
/* ----------------------- */
:root {
	/* colors */
	--clr-dark: 230 35% 7%;
	--clr-light: 231 77% 90%;
	--clr-white: 0 0% 100%;

	/* font-sizes */
	--fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
	--fs-800: 3.5rem;
	--fs-700: 1.5rem;
	--fs-600: 1rem;
	--fs-500: 1rem;
	--fs-400: 0.9375rem;
	--fs-300: 1rem;
	--fs-200: 0.875rem;

	/* font-families */
	--ff-serif: 'Bellefair', serif;
	--ff-sans-cond: 'Barlow Condensed', sans-serif;
	--ff-sans-normal: 'Barlow', sans-serif;
}

@media (min-width: 35em) {
	:root {
		/* font-sizes */
		--fs-800: 5rem;
		--fs-700: 2.5rem;
		--fs-600: 1.5rem;
		--fs-500: 1.25rem;
		--fs-400: 1rem;
	}
}

@media (min-width: 45em) {
	:root {
		/* font-sizes */
		--fs-800: 6.25rem;
		--fs-700: 3.5rem;
		--fs-600: 2rem;
		--fs-500: 1.75rem;
		--fs-400: 1.125rem;
	}
}

/* ----------------------- */
/* Reset                   */
/* ----------------------- */

/* Box sizing */
*,
*::before,
*::after {
	box-sizing: border-box;
}

/* Reset margins */
body,
h1,
h2,
h3,
h4,
h5,
p,
figure,
picture {
	margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
	font-weight: 400;
}

/* set up the body */
body {
	font-family: var(--ff-sans-normal);
	font-size: var(--fs-400);
	color: hsl(var(--clr-white));
	background-color: hsl(var(--clr-dark));
	line-height: 1.5;
	min-height: 100vh;

	display: grid;
	grid-template-rows: min-content 1fr;

	overflow-x: hidden;
}

/* make images easier to work with */
img,
picture {
	max-width: 100%;
	display: block;
}

/* make forms easier to work with */
input,
button,
textarea,
select {
	font: inherit;
}

/* Remove animations for people who've turned them off */
@media (prefers-reduced-motion: reduce) {
	*,
	*::before,
	*::after {
		animation-duration: 0.01 !important;
		animation-iteration-count: 1 !important;
		transition-duration: 0.01ms !important;
		scroll-behavior: auto !important;
	}
}

/* ----------------------- */
/* Utility classes         */
/* ----------------------- */

.flex {
	display: flex;
	gap: var(--gap, 1rem);
}

.grid {
	display: grid;
	gap: var(--gap, 1rem);
}

.d-block {
	display: block;
}

.flow > *:where(:not(:first-child)) {
	margin-top: var(--flow-space, 1rem);
}

.container {
	padding-inline: 2em;
	margin-inline: auto;
	max-width: 80rem;
}

.sr-only {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap; /* added line */
	border: 0;
}

.skip-to-content {
	position: absolute;
	z-index: 9999;
	background: hsl(var(--clr-white));
	color: hsl(var(--clr-dark));
	padding: 0.5em 1em;
	margin-inline: auto;
	transform: translateY(-100%);
	transition: transform 250ms ease-in;
}

.skip-to-content:focus {
	transform: translateY(0);
}

/* colors */

.bg-dark {
	background-color: hsl(var(--clr-dark));
}
.bg-light {
	background-color: hsl(var(--clr-light));
}
.bg-white {
	background-color: hsl(var(--clr-white));
}

.text-dark {
	color: hsl(var(--clr-dark));
}
.text-light {
	color: hsl(var(--clr-light));
}
.text-white {
	color: hsl(var(--clr-white));
}

/* typography */
.ff-serif {
	font-family: var(--ff-serif);
}
.ff-sans-cond {
	font-family: var(--ff-sans-cond);
}
.ff-sans-normal {
	font-family: var(--ff-sans-normal);
}

.letter-spacing-1 {
	letter-spacing: 4.75px;
}

.letter-spacing-2 {
	letter-spacing: 2.7px;
}

.letter-spacing-3 {
	letter-spacing: 2.35px;
}

.uppercase {
	text-transform: uppercase;
}

.fs-900 {
	font-size: var(--fs-900);
}
.fs-800 {
	font-size: var(--fs-800);
}
.fs-700 {
	font-size: var(--fs-700);
}
.fs-600 {
	font-size: var(--fs-600);
}
.fs-500 {
	font-size: var(--fs-500);
}
.fs-400 {
	font-size: var(--fs-400);
}
.fs-300 {
	font-size: var(--fs-300);
}
.fs-200 {
	font-size: var(--fs-200);
}

.fs-900,
.fs-800,
.fs-700,
.fs-600 {
	line-height: 1.1;
}

.numbered-title {
	margin-bottom: 1em;
	font-size: var(--fs-500);
	font-family: var(--ff-sans-cond);
	text-transform: uppercase;
	letter-spacing: 4.72px;
}

.numbered-title span {
	font-weight: 700;
	margin-right: 0.5em;
	color: hsl(var(--clr-white) / 0.25);
}

/* ----------------------- */
/* Components              */
/* ----------------------- */

.large-button {
	font-size: 2rem;
	position: relative;
	display: inline-grid;
	z-index: 1;
	place-items: center;
	padding: 0 2em;
	aspect-ratio: 1;
	border-radius: 50%;
	text-decoration: none;
}

.large-button::after {
	content: '';
	position: absolute;
	z-index: -1;
	width: 100%;
	height: 100%;
	background: hsl(var(--clr-white) / 0.15);
	border-radius: 50%;
	opacity: 0;
	transition: opacity 500ms linear, transform 750ms ease-in-out;
}

.large-button:hover::after,
.large-button:focus::after {
	opacity: 1;
	transform: scale(1.4);
}

/* primary-header */

.logo {
	margin: 1.5rem clamp(1.5rem, 5vw, 3.5rem);
}

.primary-header {
	justify-content: space-between;
	align-items: center;
}

.primary-navigation {
	--gap: clamp(1.5rem, 5vw, 3rem);
	--underline-gap: 2rem;
	list-style: none;
	padding: 0;
	margin: 0;
	background: hsl(var(--clr-dark) / 0.95);
}

.primary-navigation a {
	text-decoration: none;
}

.primary-navigation a > span {
	font-weight: 700;
	margin-right: 0.5em;
}

@supports (backdrop-filter: blur(1rem)) {
	.primary-navigation {
		background: hsl(var(--clr-white) / 0.05);
		backdrop-filter: blur(1rem);
	}
}

.mobile-nav-toggle {
	display: none;
}

@media (max-width: 35em) {
	.primary-navigation {
		--underline-gap: 0.5rem;
		list-style: none;
		padding: min(20rem, 15vh) 2rem;
		margin: 0;

		flex-direction: column;
		position: fixed;
		z-index: 1000;
		inset: 0 0 0 20%;
		transform: translateX(100%);
		transition: transform 500ms ease-in-out;
	}

	.primary-navigation[data-visible='true'] {
		transform: translateX(0);
	}

	.primary-navigation.underlined-indicators > .active {
		border: 0;
	}

	.mobile-nav-toggle {
		display: block;
		position: absolute;
		z-index: 2000;
		right: 1rem;
		top: 2rem;
		background: transparent;
		background-image: url(../assets/shared/icon-hamburger.svg);
		background-repeat: no-repeat;
		background-position: center;
		width: 1.5rem;
		aspect-ratio: 1;
		border: 0;
	}

	.mobile-nav-toggle[aria-expanded='true'] {
		background-image: url(../assets/shared/icon-close.svg);
	}

	.mobile-nav-toggle:focus-visible {
		outline: 5px solid hsl(var(--clr-white) / 0.5);
		outline-offset: 5px;
	}
}

@media (min-width: 35em) {
	.primary-navigation {
		padding-inline: clamp(3rem, 7vw, 7rem);
	}
}

@media (min-width: 35em) and (max-width: 44.999em) {
	.primary-navigation a > span {
		display: none;
	}
}

@media (min-width: 45em) {
	.primary-header::after {
		content: '';
		display: block;
		position: relative;
		height: 1px;
		width: 100%;
		background: hsl(var(--clr-white) / 0.25);
		order: 1;
		margin-inline: 0.5rem -2.5rem;
		z-index: 100;
		align-self: center;
	}

	nav {
		order: 2;
	}

	.primary-navigation {
		margin-block: 2rem;
	}
}

.underlined-indicators > * {
	cursor: pointer;
	padding: var(--underline-gap, 1rem) 0;
	border: 0;
	border-bottom: 0.2rem solid hsl(var(--clr-white) / 0);
}

.underlined-indicators > *:hover,
.underlined-indicators > *:focus {
	border-bottom: 3px solid hsl(var(--clr-white) / 0.5);
}

.underlined-indicators > .active,
.underlined-indicators > [aria-selected='true'] {
	color: hsl(var(--clr-white) / 1);
	border-bottom: 3px solid hsl(var(--clr-white) / 1);
}

.tabs-list > * {
	--gap: 2rem;
}

.dot-indicators > * {
	cursor: pointer;
	border: 0;
	border-radius: 50%;
	aspect-ratio: 1;
	padding: 0.5rem;
	background-color: hsl(var(--clr-white) / 0.25);
}

.dot-indicators > *:hover,
.dot-indicators > *:focus {
	background-color: hsl(var(--clr-white) / 0.5);
}

.dot-indicators > [aria-selected='true'] {
	background-color: hsl(var(--clr-white) / 1);
}

.numbers-indicators > * {
	cursor: pointer;
	display: grid;
	place-content: center;
	border: 0.15rem solid hsl(var(--clr-white) / 1);
	padding: 2.5rem;
	aspect-ratio: 1;
	border-radius: 50%;
	background-color: hsl(var(--clr-white) / 1);
}
.numbers-indicators > *:hover {
	color: hsl(var(--clr-white) / 1);
	background-color: hsl(var(--clr-white) / 0);
}

.numbers-indicators > [aria-selected='true'] {
	color: hsl(var(--clr-white) / 1);
	border: 0.15rem solid hsl(var(--clr-white) / 0.25);
	background-color: hsl(var(--clr-white) / 0);
}

.top-header {
	margin: 2em 0 2em 2em;
	align-items: center;
	justify-content: space-between;
}

.top-header .header-line {
	margin-inline: 3.5rem -4rem;
	width: 100%;
	height: 0.025rem;
	background-color: hsl(var(--clr-white) / 0.25);
}

.top-header .navigation {
	padding-inline: 7em 9em;
	background-color: hsl(var(--clr-white) / 0.05);
}

/* ------------------------- */
/* Page specific background  */
/* ------------------------- */

body {
	background-size: cover;
	background-position: bottom center;
}

/* Home */
.home {
	background-image: url(../assets/home/background-home-mobile.jpg);
}

@media (min-width: 35em) {
	.home {
		background-position: center center;
		background-image: url(../assets/home/background-home-tablet.jpg);
	}
}

@media (min-width: 45em) {
	.home {
		background-image: url('../assets/home/background-home-desktop.jpg');
	}
}

/* ------------------------- */
/* Layout                    */
/* ------------------------- */

.grid-container {
	text-align: center;
	display: grid;
	place-items: center;
	padding-inline: 1rem;
	padding-bottom: 4rem;
}

.grid-container * {
	max-width: 50ch;
}

.numbered-title {
	grid-area: title;
}

/* Destination layout */

.grid-container--destination {
	--flow-space: 2rem;
	grid-template-areas:
		'title'
		'image'
		'tabs'
		'content';
}

.grid-container--destination > img {
	grid-area: image;
	max-width: 60%;
}

.grid-container--destination > .tab-list {
	grid-area: tabs;
}

.grid-container--destination > .destination-info {
	grid-area: content;
}

.destination-meta {
	flex-direction: column;
	border-top: 1px solid hsl(var(--clr-white) / 0.1);
	padding-top: 2.5rem;
	margin-top: 2.5rem;
}

.destination-meta p {
	font-size: 1.75rem;
}

@media (min-width: 35em) {
	.numbered-title {
		justify-self: start;
		margin-top: 2rem;
	}

	.destination-meta {
		flex-direction: row;
		justify-content: space-evenly;
	}
}

@media (min-width: 45em) {
	.grid-container {
		text-align: left;
		column-gap: var(--container-gap, 2rem);
		grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(2rem, 1fr);
	}

	.grid-container--home {
		padding-bottom: max(6rem, 20vh);
		align-items: end;
	}

	.grid-container--home > *:first-child {
		grid-column: 2;
	}

	.grid-container--home > *:last-child {
		grid-column: 3;
	}

	.grid-container--destination {
		justify-items: start;
		align-content: start;
		grid-template-areas:
			'. title title .'
			'. image tabs .'
			'. image content .';
	}

	.grid-container--destination > img {
		max-width: 100%;
	}

	.destination-meta {
		--gap: 6rem;
		justify-content: start;
	}
}

